# RFID

./: .gitignore  .gitmodules  README.md
define_areas/: CMakeLists.txt
define_areas/rviz/: check_map.rviz
define_polygon_areas/launch/: article.launch
define_polygon_areas/maps/: SMH.yaml
define_polygon_areas/src/: define_polygon_areas.cpp
deprecated/define_areas/: package.xml
deprecated/define_areas/maps/: FDG2.yaml
deprecated/define_polygon_areas/: CMakeLists.txt  README.md  package.xml
deprecated/define_polygon_areas/config/: visualization.yaml
deprecated/define_polygon_areas/launch/: check_map_smh.launch
deprecated/define_polygon_areas/src/: define_polygon_areas_node.cpp
deprecated/newModel/include/: RadarModel.hpp
deprecated/newModel/src/: RadarModelROS.cpp
gazebo/gazebo_rfid/: CMakeLists.txt  README.md  package.xml  rfid_reader.xml  rfid_tag.xml
gazebo/gazebo_rfid/include/gazebo_rfid/: RFIDReader.h  RFIDReaderPrivate.h  RFIDReaderRosPlugin.h  RFIDTag.h  RFIDTagPrivate.h  RFIDTransceiver.h
gazebo/gazebo_rfid/msgs/: CMakeLists.txt  tag_inventory.proto  tag_reading.proto
gazebo/gazebo_rfid/src/: RFIDReader.cpp  RFIDReaderRosPlugin.cpp  RFIDTag.cpp  RFIDTransceiver.cpp
gazebo/gazebo_rfid_node/include/wirelessNodeMonitor/: wirelessNodeMonitor.h
gazebo/gazebo_rfid_node/launch/: demo.launch  demo_two_tags.launch  test.launch
gazebo/gazebo_rfid_node/rviz/: gazebo_reader_rfid.rviz  gazebo_thorvald_rfid.rviz
gazebo/gazebo_rfid_node/src/: wirelessNodeMonitor.cpp
gazebo/gazebo_rfid_node/urdf/: person_tag_model.xacro  reader_model.xacro  tag_model.xacro
gazebo/gazebo_rfid_node/urdf/sensor_modules/: sensor_frames_lincoln_rfid.xacro
gazebo_rfid_node/: package.xml
gazebo_rfid_node/include/wirelessNodeMonitor/: wirelessNodeMonitor.h
gazebo_rfid_node/launch/: demo.launch
gazebo_rfid_node/rviz/: gazebo_thorvald_rfid.rviz
gazebo_rfid_node/src/: wirelessNodeMonitor.cpp
gazebo_rfid_node/urdf/: tag_model.xacro
newModel/: CMakeLists.txt  package.xml
newModel/include/: RadarModel.hpp  RadarModelROS.hpp
newModel/src/: RadarModel.cpp  test_log_model.cpp
pr_model/: CMakeLists.txt  package.xml
pr_model/launch/: 1_replay_20db_model.launch  1_replay_20db_model_test.launch  1_replay_30db_model.launch  1_replay_linda.launch  1_replay_long_model.launch  1_replay_static_linda.launch  2_replay_20dB_model.launch  2_replay_30db_model.launch  2_replay_linda.launch  2_replay_linda_KLS.launch  2_replay_long_model.launch  3_locate_30db_model.launch  3_locate_linda_model.launch  3_locate_long_model.launch  amcl_diff.launch  dont_move_linda.launch  move_linda.launch  record_linda.launch  tagData.launch
pr_model/scripts/: createModelFromCSV.py  createModelFromCSV_1.py  createModelFromCSV_freq_r.py  createModelFromCSV_freq_xy.py  createModelFromCSV_old.py  createModelFromCSV_single_r.py  createRFIDcsv.py  createRFIDcsvKLS.py  examplePyParticleEst.py  frequencyModel.py  frequencyModelNew.py  homeParticleFilter.py  interactiveRFID.py  locator_node.py  manova.py  modelServer.py  parseRecording.py  parseRecordingKLS.py  parseRecordingWithPoses.py  parseRosbagsNoPlay.py  plotAvRSSI_new.py  plotDataSet.py  publishPosition.py  pyBaya.py  pyBaya0.py  rotate_topo_nodes.py  sistematicRecorder.py  testModelFromCSV.py  testbench.py  testbench_friis.py  testbench_ransac.py
pr_model/scripts/old/: createModelFromCSV.py  createModelFromCSV_old.py  parseRecording.py  parseRecordingWithPoses.py
pr_model/tests/30db/: 30db.csv  30db_model.csv
pr_model/tests/linda/: 20db-linda-fab-lab.csv  fab-lab-rfid-topo.yaml  fab-lab-rfid.yaml  linda.rviz  linda_model.rviz
pr_model/tests/long/: WW_GF_2015_02_22_cropped.yaml  amcl.rviz  long_1tag.csv  long_1tag_model.csv  long_all_tags.csv  long_normal_speed.csv
reader/: rfid_test.py
reader/src/clients/python/: rfid.py
reader/src/lib/: libmercuryrfid.c
rfid_grid_map/: CMakeLists.txt  package.xml
rfid_grid_map/config/: LCAS3_tiago.yaml  SMH_tiago.yaml  visualization.yaml
rfid_grid_map/include/: RadarModelROS.hpp  readings_queue.hpp
rfid_grid_map/include/rfid_grid_map/: rfid_gridMap.hpp  rfid_gridMap2.hpp  rfid_gridMap3.hpp
rfid_grid_map/launch/: grid.launch  grid3.launch  grid_debug.launch  grid_deploy.launch  grid_visualization.launch  rfid_grid_REPLAY_FDG_Monday.launch  rfid_grid_test_FDG_Tiago.launch  rfid_grid_test_PUMS2.launch
rfid_grid_map/rviz/: rfid_gridmap_test_FDG.rviz  rfid_gridmap_test_PUMS.rviz
rfid_grid_map/scripts/: rosbag_tag_counter.py  tag_discovery_node.py
rfid_grid_map/src/: RadarModelROS.cpp  rfid_gridMap.cpp  rfid_gridMap2.cpp  rfid_gridMap2_dirty.cpp  rfid_gridMap3.cpp  rfid_grid_map_node.cpp  rfid_grid_map_node2.cpp  rfid_grid_map_node3.cpp  viewZois.cpp
rfid_grid_map/srv/: GetBeliefMaps.srv  GetFakeBeliefMaps.srv
rfid_grid_map/test/fdg_tests2/: realLocations.txt
rfid_grid_map/test/fdg_tests3/map/: map.pgm  mmap.yaml
rfid_grid_map/test/pums_test2/: mmap.yaml  service_logs.txt  submap_0.pgm
rfid_grid_map/test/pums_tests/: map.yaml  results.txt
rfid_grid_map/test/tiago_tests/INB3123/: map.yaml  mmap.yaml
rfid_particles/: CMakeLists.txt  package.xml  tests
rfid_particles/launch/: 3_locate_30db_model.launch  markers.launch  record_linda.launch
rfid_rssi/: package.xml
rfid_rssi/scripts/: ParticleFilter.py  advance.py  model.py
rfid_rssi/scripts/mfc/: mfcModel.py  plotAvRSSI_THRESHOLDED.py
rfid_sensor_layer/: CMakeLists.txt  package.xml
rfid_sensor_layer/config/: test_params.yaml
rfid_sensor_layer/include/rfid_sensor_layer/: rfid_sensor_layer.h
rfid_sensor_layer/launch/: test_rfl.launch
rfid_sensor_layer/src/: rfid_sensor_layer.cpp
src/clients/ros/define_areas/launch/: check_map_fdg.launch
src/clients/ros/define_areas/src/: define_areas.cpp
src/clients/ros/define_polygon_areas/: CMakeLists.txt
src/clients/ros/define_polygon_areas/launch/: check_map_fdg.launch  check_map_lcas.launch
src/clients/ros/rfid_grid_map/: CMakeLists.txt
src/clients/ros/rfid_node/: CMakeLists.txt
src/examples/python/: renameExample.py
(+84 files in other folders)
