<?xml version="1.0"?>
<package format="2">
  <name>gazebo_rfid</name>
  <version>1.0.0</version>
  <description>Gazebo RFID Reader and Tag sensors, plugins and msgs. Based on https://github.com/peci1/gazebo_rotating_lidar work</description>
  <url type="website">https://github.com/LCAS/RFID</url>

  <license>BSD</license>

  <author email="manolofc@gmail.com">Manuel Fernandez Carmona</author>
  <maintainer email="manolofc@gmail.com">Manuel Fernandez Carmona</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_plugins</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rfid_node</depend>

  <exec_depend>gazebo_custom_sensor_preloader</exec_depend>

  <build_depend>boost</build_depend>

  <export>
    <gazebo_custom_sensor_preloader plugin="${prefix}/rfid_reader.xml" />
    <gazebo_custom_sensor_preloader plugin="${prefix}/rfid_tag.xml" />
  </export>
</package>
